--- a/build.gradle
+++ b/build.gradle
@@ -27,6 +27,7 @@ dependencies {
     testImplementation("org.junit.jupiter:junit-jupiter-api:${junitVersion}")
     testRuntimeOnly("org.junit.jupiter:junit-jupiter-engine:${junitVersion}")
     //외부기능_추가_1
+    //추가,업데이트 실행 후 외부 라이브러리 추가되는거 확인하기
     implementation group: 'jstl', name: 'jstl', version: '1.2'
 }
 
